--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>I can code now</h2>
     <h3>New code changed</h3>
     <p>a paragraph</p>
+    <img src="Luffy.jpg" alt="">
 </body>
 </html>
