--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h2>I can code now</h2>
     <h3>New code changed</h3>
     <p>a paragraph</p>
-    <img src="Luffy.jpg" alt="">
+    <img src="Luffy.jpg" width="500px">
 </body>
 </html>
