--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3>New code changed</h3>
     <p>a paragraph</p>
     <img src="Luffy.jpg" width="500px">
+    <img src="Hacker.jpg" width="600px" alt="">
 </body>
 </html>
