--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>a paragraph</p>
     <div>
         <h2>New blog</h2>
-        <h4>look mom I can write a blog</h4>
+        <h4>look mom I can write a blog... </h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sint libero ut voluptate doloribus nobis modi nulla iusto porro corrupti fugit aut eligendi optio ipsa consequuntur, veniam vero numquam architecto eveniet molestias. Ad facilis, libero error id quod ab dolorem at laboriosam? Porro mollitia, molestiae voluptatibus quia dicta illum magni!</p>
     </div>
     <img src="Luffy.jpg" width="500px">
